force-app/main/default/objects/THOR_Global_Search_Profile__mdt.object
<CustomObject>
    <fields>
        <fullName>Notification_Record_Display__c</fullName>
        <label>Notification Record Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Record_Display__c</fullName>
        <label>Order Record Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Clearance_Record_Display__c</fullName>
        <label>Work Clearance Record Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>THOR_Global_Search_Profile</label>
</CustomObject>